--- a/style.css
+++ b/style.css
@@ -3,28 +3,28 @@
   src: url(CentSchbkCyrill.ttf);
 }
 
-*{
+* {
   box-sizing: border-box;
-  font-family: 'Cent';
+  font-family: "Cent";
 }
-body{
+body {
   padding: 0;
   margin: 0;
-  font-family: 'Cent';
+  font-family: "Cent";
 }
-a{
+a {
   text-decoration: none;
   color: #fff;
 }
-li{
+li {
   list-style-type: none;
 }
-ul{
+ul {
   padding: 0;
 }
 
-header{
-  background-color: rgba(76,174,201,255);
+header {
+  background-color: rgba(76, 174, 201, 255);
 }
 .header-container {
   display: flex;
@@ -35,12 +35,12 @@ header{
   margin: 0 auto;
   position: relative;
 }
-.navigation{
+.navigation {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 2rem;
-  background-color: rgba(76,174,201,255);
+  background-color: rgba(76, 174, 201, 255);
 }
 .nav-menu {
   display: flex;
@@ -51,11 +51,12 @@ header{
   margin: 0;
   gap: 1rem;
 }
-.hamburger, #checkbox-toggle{
+.hamburger,
+#checkbox-toggle {
   display: none;
   color: #fff;
 }
-.nav-link{
+.nav-link {
   font-weight: bold;
   padding: 1rem;
   font-size: 16px;
@@ -63,28 +64,25 @@ header{
   text-transform: uppercase;
 }
 
-
-
-.banner{
+.banner {
   background-color: #4caec9;
   padding-top: 4rem;
   margin-bottom: 3rem;
-  
 }
-.banner-container{
+.banner-container {
   max-width: 1400px;
   justify-content: center;
 }
 
-.dog__food{
- position: relative;
- bottom: -3rem;
- width: 30%;
+.dog__food {
+  position: relative;
+  bottom: -3rem;
+  width: 30%;
 }
-.banner__dog{
+.banner__dog {
   width: 20%;
 }
-.banner__text{
+.banner__text {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -92,16 +90,14 @@ header{
   width: 50%;
 }
 
-.banner__text > h1{
+.banner__text > h1 {
   font-size: 3.5rem;
   font-weight: 600;
   color: #715258;
 }
-.banner__text > img{
+.banner__text > img {
   width: 90%;
 }
-
-
 
 .story__content {
   display: flex;
@@ -126,44 +122,44 @@ header{
 .story__content__heading > h2 {
   font-size: 41px;
   font-weight: 700;
-  color: rgba(76,38,47,255);
+  color: rgba(76, 38, 47, 255);
 }
 
 .story__content__heading > h3 {
   font-size: 5.5rem;
   font-weight: 700;
-  color: rgba(76,174,201,255);
+  color: rgba(76, 174, 201, 255);
   margin-top: -25px;
 }
 
-.story__content__text{
+.story__content__text {
   width: 40%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.story__content__text > p{
+.story__content__text > p {
   font-size: 22px;
   font-weight: 600;
   color: #8d8d8d;
   margin-bottom: 4rem;
 }
-.story__content__text > a{
+.story__content__text > a {
   text-decoration: none;
   font-size: 17px;
   font-weight: 600;
-  color: rgba(76,174,201,255);
+  color: rgba(76, 174, 201, 255);
 }
 
-.receipe{
+.receipe {
   /* position: relative; */
   background-image: url(assets/bg_image.png);
   height: 40vh;
   background-size: cover;
   background-position: center center;
   background-blend-mode: multiply;
-  background-color: rgb(36, 35, 35,0.8);
+  background-color: rgb(36, 35, 35, 0.8);
 }
 
 .receipe__content {
@@ -191,10 +187,9 @@ header{
   font-weight: 300;
   width: 60%;
   text-align: center;
-  
 }
 
-.life > figure{
+.life > figure {
   display: flex;
   gap: 2rem;
   padding: 2rem 0;
@@ -219,12 +214,12 @@ header{
   color: #67454c;
 }
 
-.life > figure > figcaption > p{
+.life > figure > figcaption > p {
   font-weight: 500;
   font-size: 1.2rem;
 }
 
-.life > figure > figcaption > button{
+.life > figure > figcaption > button {
   width: 20%;
   border: 0;
   background-color: #4caec9;
@@ -233,7 +228,7 @@ header{
   padding: 1rem 1.5rem;
 }
 
-.food > figure{
+.food > figure {
   display: flex;
   gap: 2rem;
   padding: 2rem 0;
@@ -259,12 +254,12 @@ header{
   color: #67454c;
 }
 
-.food > figure > figcaption > p{
+.food > figure > figcaption > p {
   font-weight: 500;
   font-size: 1.2rem;
 }
 
-.food > figure > figcaption > button{
+.food > figure > figcaption > button {
   width: 35%;
   border: 0;
   background-color: #4caec9;
@@ -273,44 +268,41 @@ header{
   padding: 1rem 1.5rem;
 }
 
-aside ul li a{
+aside ul li a {
   text-decoration: none;
   color: black;
   font-weight: bold;
   padding-left: 0;
 }
 
-.footer-container{
+.footer-container {
   display: flex;
 }
-.footer__dog{
-width: 40%;
-
+.footer__dog {
+  width: 40%;
 }
-aside{
+aside {
   width: 50%;
   margin-left: 5rem;
-  
 }
-aside ul{
+aside ul {
   justify-content: flex-start;
 }
-.social-media-icons li i{
-  background-color:  #4caec9;
+.social-media-icons li i {
+  background-color: #4caec9;
   font-size: larger;
   border-radius: 2rem;
 }
 .bottom__footer {
   font-weight: 600;
 }
-@media screen and (max-width: 1024px){
-  html{
+@media screen and (max-width: 1024px) {
+  html {
     font-size: 12px;
   }
-  .logo{
+  .logo {
     width: 100px;
   }
-  
 
   .story__content__heading {
     width: 20%;
@@ -337,66 +329,63 @@ aside ul{
   .receipe__content > h3 {
     font-size: 1.5rem;
   }
-  
+
   .receipe__content > h2 {
     font-size: 4rem;
   }
-  
+
   .receipe__content > p {
     font-size: 1.2rem;
   }
 }
 @media screen and (max-width: 768px) {
-  
-  .life > figure > figcaption > button{
+  .life > figure > figcaption > button {
     width: 25%;
     font-size: 0.8rem;
   }
 
-  .food > figure > figcaption > button{
+  .food > figure > figcaption > button {
     width: 35%;
     font-size: 0.8rem;
   }
   .food > figure > figcaption > h3 {
     width: 100%;
   }
-  .banner__text > h1{
+  .banner__text > h1 {
     font-size: 2.5rem;
     font-weight: 600;
     color: #715258;
   }
-  .dog__food{
+  .dog__food {
     position: relative;
     bottom: -3rem;
     width: 30%;
-   }
-   .banner__dog{
-     width: 20%;
-   }
-   .banner__text{
-     display: flex;
-     flex-direction: column;
-     justify-content: center;
-     align-items: center;
-     width: 40%;
-   }
-   
-} 
-@media screen and (max-width: 580px){
-  
-  .banner-container{
+  }
+  .banner__dog {
+    width: 20%;
+  }
+  .banner__text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+  }
+}
+@media screen and (max-width: 580px) {
+  .banner-container {
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 3rem;
   }
-  .dog__food{
-    width: 50%;
-   }
-  .banner__dog{
+  .dog__food {
     width: 50%;
   }
-  .banner__text{
+  .banner__dog {
+    width: 50%;
+  }
+  .banner__text {
     width: 90%;
   }
   .story__content__heading {
@@ -408,13 +397,13 @@ aside ul{
   .story__content > img {
     width: 50%;
   }
-  
+
   .hamburger {
     display: block;
     margin-right: 2rem;
     font-size: 2rem;
   }
-  .navigation{
+  .navigation {
     position: absolute;
     flex-direction: column;
     justify-content: center;
@@ -427,7 +416,7 @@ aside ul{
     border-bottom: 1px solid #c1c3c5;
     transition: all 0.5s ease-in-out;
   }
-  .nav-menu{
+  .nav-menu {
     flex-direction: column;
   }
   .nav-link {
@@ -440,34 +429,34 @@ aside ul{
   input[type="checkbox"]:checked ~ .navigation {
     left: 0;
   }
-  .life > figure{
+  .life > figure {
     justify-content: center;
   }
 
   .life > figure > img {
     width: 40%;
   }
-  .life > figure > figcaption > button{
+  .life > figure > figcaption > button {
     width: 35%;
     font-size: 0.9rem;
   }
-  .food > figure{
+  .food > figure {
     justify-content: center;
   }
 
   .food > figure > img {
     width: 40%;
   }
-  .food > figure > figcaption > button{
+  .food > figure > figcaption > button {
     width: 35%;
     font-size: 0.9rem;
   }
-  .footer-container{
+  .footer-container {
     flex-direction: column;
   }
 }
 
-@media screen and (max-width: 425px){
+@media screen and (max-width: 425px) {
   .story__content__heading {
     width: 100%;
   }
@@ -481,27 +470,27 @@ aside ul{
   .receipe__content > h3 {
     font-size: 1.5rem;
   }
-  
+
   .receipe__content > h2 {
     font-size: 2.5rem;
   }
-  
+
   .receipe__content > p {
     font-size: 1.2rem;
     width: 90%;
   }
-  .life > figure > figcaption{
+  .life > figure > figcaption {
     width: 90%;
   }
-  .food > figure > figcaption{
+  .food > figure > figcaption {
     width: 90%;
   }
 
-  .life > figure > figcaption > button{
+  .life > figure > figcaption > button {
     width: 40%;
     font-size: 0.8rem;
   }
-  .food > figure > figcaption > button{
+  .food > figure > figcaption > button {
     width: 40%;
     font-size: 0.8rem;
   }
